src/test/ui/suggestions/undeclared-module-alloc.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `alloc`
  --> $DIR/undeclared-module-alloc.rs:3:5
   |
LL | use alloc::rc::Rc;
   |     ^^^^^ use of undeclared crate or module `alloc`
   |
   = help: add `extern crate alloc` to use the `alloc` crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
